--- a/app/src/main/res/drawable/border.xml
+++ b/app/src/main/res/drawable/border.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke
-        android:width="10sp"
-        android:color="@android:color/holo_orange_dark" />
+        android:width="4sp"
+        android:color="#696969" />
     <corners android:radius="10sp"/>
-    <solid android:color="@color/teal_200"/>
+    <solid android:color="#C0C0C0"/>
 
 </shape>
