--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="dark_green">#134611</color>
+    <color name="yellow">#f7fe72</color>
+    <color name="light_green">#3c7a89</color>
+    <color name="pink">#ff9fb2</color>
+    <color name="pink_white">#FFF</color>
 </resources>
