--- a/app/src/main/res/layout/activity_previous_items.xml
+++ b/app/src/main/res/layout/activity_previous_items.xml
@@ -27,10 +27,28 @@
 
         <LinearLayout
             android:layout_below="@+id/scrollable"
+            android:id="@+id/total_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <EditText
+                android:id="@+id/search_bar"
+                android:tag="search_bar"
+                android:layout_marginHorizontal="25sp"
+                android:layout_marginTop="10sp"
+                android:background="@drawable/edittextborder"
+                android:layout_width="match_parent"
+                android:layout_height="30sp"
+                android:paddingLeft="10sp"
+                android:hint="search items"/>
+        <LinearLayout
+            android:layout_below="@+id/scrollable"
             android:id="@+id/linear_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
+        </LinearLayout>
 
         </LinearLayout>
 
